# tau

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md
demo/: .gitignore  tau.conf.json
demo/.tau/: package.json  pnpm-lock.yaml  tau.d.ts  vite.config.js
demo/src/: index.html
examples/configured-app/: README.md  index.html  tau.conf.json
examples/configured-app/css/: main.css
examples/configured-app/data/: notes.json
examples/configured-app/js/: app.js
examples/haptics-demo/: app.js  index.html  style.css  tau.conf.json
examples/r3f-demo/: README.md  package-lock.json  package.json  tau.conf.json  vite.config.js
examples/r3f-demo/src/: App.jsx  index.html
examples/sample-app/: index.html
examples/sample-app/css/: main.css
examples/sample-app/js/: app.js
examples/test-game/.tau/: package.json  pnpm-lock.yaml  vite.config.js
examples/test-game/src/: game.js  index.html
examples/testies/: tau.conf.json
examples/testies/.tau/: package.json  pnpm-workspace.yaml
examples/testies/demo/.tau/: package.json  tau.d.ts  tsconfig.json  vite.config.js
examples/testies/src/: game.js  index.html
src/: analyze.rs  build.rs  build_project.rs  cache.rs  cli.rs  create.rs  dev.rs  filter.rs  init.rs  input.rs  log.rs  main.rs  pipeline.rs  signing.rs  tooling.rs  trace.rs
src/config/: mod.rs  platform.rs
src/discover/: css.rs  glob.rs  mod.rs
src/scaffold/: mod.rs
src/scaffold/templates/: Cargo.toml.tmpl  lib.rs.tmpl  livereload.js  main.rs.tmpl
tools/bundle-plugins/: .gitignore  build.mjs  package.json
(+13 files in other folders)
