[package]
name = "tau"
version = "0.1.0"
edition = "2021"
description = "Wrap a web app into a mobile or desktop app by pointing at index.html"
license = "MIT"

[[bin]]
name = "tau"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
walkdir = "2"
tempfile = "3"
globset = "0.4"
regex = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
